Feature/inf2 22 (#5)
* Beginning work on helm chart for deployment

* Setting default chart values

* Working on deployment helm chart

* Integrating configuration into container

* Adding secrets to values file

* Updating values template file

* More progress with template configuration

* Added ports to deployment template

* Added service config to deployment template

* Integrated secrets into deployment

* Added liveness probe to deployment template

* Cleaned up TODO

* Added one proper secret

* More progress integrating secrets

* Updated more secrets

* Updated todos

* Refactoring template files for deployment

* Updated helm chart name

* Updated values file

* Removing preview features flag

* Updated nexus URL for deployment

* Fixed chart name

* Added lockfile and .gitignore

* Fixed values file

* Fixed app name

* Changed postgres hostname

* Updated configmap

* Added debug logging

* Fixing configmap some more

* Updated dockerfile